Deleting device completed
